# ai-finder

./: .env.example  .gitignore  LICENSE  README.md  config.toml.example  pyproject.toml
.github/workflows/: tests.yml
ai_finder/: __init__.py  app.py  browser.py  cache.py  cache_base.py  cache_warming.py  commands.py  composition.py  config.py  container.py  cqrs.py  db.py  dedup.py  fast_io.py  fingerprint.py  health.py  keywords.py  loop_monitor.py  main.py  memory_cache.py  ml_scorer.py  models.py  net.py  notifier.py  pipeline.py  queries.py  rate_limiter.py  registry.py  scorer.py  secrets.py  supervisor.py  tracker.py  urls.py  verifier.py
ai_finder/collectors/: __init__.py  _base.py  ai_directories.py  apify_sources.py  asian_dev.py  forums.py  foss_sources.py  github_trending.py  hackernews.py  hidden_gems.py  intl_forums.py  launch.py  linux_do.py  linux_forums.py  mastodon.py  reddit_rss.py  telegram_channels.py
k8s/: configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
tests/: test_ai_directories.py  test_apify_sources.py  test_asian_dev.py  test_base.py  test_browser.py  test_cli.py  test_config_sync.py  test_db.py  test_dotenv.py  test_forums.py  test_foss_sources.py  test_github_trending.py  test_hackernews.py  test_hidden_gems.py  test_intl_forums.py  test_launch.py  test_linux_do.py  test_linux_forums.py  test_mastodon.py  test_net.py  test_notifier.py  test_reddit_rss.py  test_scorer.py  test_store_candidates.py  test_telegram_channels.py  test_tracker.py  test_verifier.py
