[project]
name = "ai-finder"
version = "0.1.0"
description = "Discover niche AI services with APIs and referral programs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "apify-client>=1.7",
    "telethon>=1.36",
    "schedule>=1.2",
    "tldextract>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]
stealth = ["camoufox[geoip]>=0.4"]

[project.scripts]
ai-finder = "ai_finder.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_finder*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled loosely for data-heavy modules
